samples/_failures_safe/1761254304_813983_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1d9ade1.c: In function ‘main’:
./samples/SAFE/__tmp_e1d9ade1.c:161:5: error: expected identifier or ‘(’ at end of input
  161 |     GraphOperation
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e1d9ade1.c:161:5: error: expected declaration or statement at end of input
